// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> renders correctly 1`] = `
<Radio
  className="Radio"
  id="Gender"
  isChecked={false}
  isDisabled={false}
  isReadOnly={false}
  label="Gender"
  labelClassName="Radio-label"
  name="Gender"
  onChange={[MockFunction]}
  value="male"
>
  <label
    className="Radio"
    htmlFor="Gender"
  >
    <input
      checked={false}
      className="Radio-input"
      disabled={false}
      id="Gender"
      name="Gender"
      onChange={[Function]}
      readOnly={false}
      type="radio"
      value="male"
    />
    <span
      className="Radio-label"
    >
      Gender
    </span>
  </label>
</Radio>
`;

exports[`<Radio /> renders correctly when is disabled 1`] = `
<Radio
  className="Radio"
  id="Gender"
  isChecked={false}
  isDisabled={true}
  isReadOnly={false}
  label="Gender"
  labelClassName="Radio-label"
  name="Gender"
  onChange={[MockFunction]}
  value="male"
>
  <label
    className="Radio"
    htmlFor="Gender"
  >
    <input
      checked={false}
      className="Radio-input"
      disabled={true}
      id="Gender"
      name="Gender"
      onChange={[Function]}
      readOnly={false}
      type="radio"
      value="male"
    />
    <span
      className="Radio-label"
    >
      Gender
    </span>
  </label>
</Radio>
`;

exports[`<Radio /> renders correctly when isReadOnly 1`] = `
<Radio
  className="Radio"
  id="Gender"
  isChecked={false}
  isDisabled={false}
  isReadOnly={true}
  label="Gender"
  labelClassName="Radio-label"
  name="Gender"
  onChange={[MockFunction]}
  value="male"
>
  <label
    className="Radio"
    htmlFor="Gender"
  >
    <input
      checked={false}
      className="Radio-input"
      disabled={false}
      id="Gender"
      name="Gender"
      onChange={[Function]}
      readOnly={true}
      type="radio"
      value="male"
    />
    <span
      className="Radio-label"
    >
      Gender
    </span>
  </label>
</Radio>
`;
